# Rune

./: .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: design.md
scripts/: notarize.ps1
src/: inline-css.d.ts  main.ts  readme.test.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs_ops.rs  lib.rs  search.rs  settings.rs
src/brand/: sparkle.test.ts  sparkle.ts
src/chrome/: chrome.ts  wordcount.test.ts  wordcount.ts
src/doc/: document.test.ts  document.ts
src/editor/: blockWidgets.ts  docContext.ts  editor.ts  findHighlights.test.ts  findHighlights.ts  highlightStyle.ts  horizontalRule.test.ts  horizontalRule.ts  image.test.ts  image.ts  livePreview.ts  markdownCommands.test.ts  markdownCommands.ts  math.ts  mathSpan.test.ts  mathSpan.ts  mermaid.ts  outline.test.ts  outline.ts  paste.ts  previewWidget.test.ts  previewWidget.ts  slashCommands.test.ts  slashCommands.ts  splitPreview.test.ts  splitPreview.ts  table.test.ts  table.ts  taskMarker.test.ts  taskMarker.ts
src/export/: exportDoc.ts  render.test.ts  render.ts
src/i18n/: i18n.test.ts  i18n.ts  parity.test.ts
src/ipc/: bindings.ts
src/theme/: editorTheme.ts  fonts.test.ts  fonts.ts  scale.test.ts  scale.ts  tokens.test.ts
src/workspace/: autosave.ts  commandPalette.ts  conflictBanner.ts  contextMenu.ts  dropTargets.test.ts  fileDrop.ts  (+34 more)
tools/: gen-brand-assets.mjs  gen-demo.mjs  gen-og.mjs
(+23 files in other folders)
